Modified the Chrome Custom Tab sample to serve as an OAuth 2.0 for Native Apps proof of concept – Registered an iOS client at console.developers.google.com (iOS clients support Custom URI schemes) – Added the reverse-client-id scheme of that iOS client to the AndroidManifest.xml to register for intents on that scheme – Created a new Activity "CustomLink" to handle incoming intents on that scheme – Defaulted demo to use my sample domain https://www.oauth2.pw
More about OAuth 2.0 for Native Apps: https://tools.ietf.org/html/draft-wdenniss-oauth-native-apps-00

--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="may_launch_button_text">May Launch URL</string>
     <string name="launch_button_text">Launch URL in a Chrome Custon Tab</string>
     <string name="connect_button_text">Connect to the service</string>
+    <string name="title_activity_customlink">Customlink</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 </resources>
